<resources>
    <string name="app_name">Java Don\'t Lie Kotlin</string>
    <string name="delete_all">Delete All</string>
    <string name="ok">yes</string>
    <string name="no">no</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="calculate">calculate</string>
    <string name="amount">amount</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="start_amount">Start Amount</string>
    <string name="game_name">Game Name</string>
    <string name="new_game">New Game</string>
    <string name="java_don_t_lie">Java Don\'t Lie!</string>
    <string name="open">Open</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_delete"><![CDATA[<]]></string>
    <string name="clear">Clear</string>
    <string name="textview">TextView</string>
    <string name="decimal"><![CDATA[.]]></string>
    <string name="show_history">show history</string>
    <string name="hide">X</string>
</resources>
