<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.moneyUi.MoneyActivity"
        android:orientation="vertical"
        android:background="@color/main_background"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:clipToPadding="false">

    <TextView
            android:id="@+id/money_amount"
            android:layout_width="411dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/app_name"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="45sp"
            android:background="#7c42bd"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="160dp" app:layout_constraintTop_toTopOf="parent"/>


    <TextView
            android:id="@+id/money_amount_text"
            android:layout_width="411dp"
            android:layout_height="82dp"
            android:gravity="center"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:background="#7c42bd"
            android:shadowColor="#fff"
            app:layout_constraintStart_toStartOf="@id/money_amount" app:layout_constraintEnd_toEndOf="@id/money_amount"
            android:hint="@string/amount"
            app:layout_constraintTop_toBottomOf="@+id/money_amount" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/button8" android:layout_marginTop="32dp"/>


    <Button
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:text="@string/minus" tools:ignore="ButtonStyle,UnusedAttribute"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/button3"/>

    <Button
            android:id="@+id/addition"
            android:layout_width="83dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:text="@string/plus" tools:ignore="ButtonStyle,UnusedAttribute"
            app:layout_constraintBaseline_toBaselineOf="@+id/subtract"
            app:layout_constraintStart_toStartOf="@+id/button1"
            app:layout_constraintEnd_toStartOf="@+id/button2"/>
    <Button
            android:text="@string/_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:onClick="toText"
            app:layout_constraintBottom_toTopOf="@+id/button6" app:layout_constraintStart_toStartOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="@+id/button8" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:onClick="toText"
            app:layout_constraintBottom_toTopOf="@+id/button5" app:layout_constraintStart_toStartOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="@+id/button5" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:onClick="toText"
            app:layout_constraintBottom_toTopOf="@+id/button4" app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="@+id/button4" app:layout_constraintTop_toTopOf="@+id/button8"/>
    <Button
            android:text="@string/_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:onClick="toText"
            app:layout_constraintTop_toTopOf="@+id/button5" app:layout_constraintBottom_toBottomOf="@+id/button5" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/button5" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:onClick="toText"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <Button
            android:text="@string/_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:onClick="toText"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintTop_toTopOf="@+id/button5"
            app:layout_constraintBottom_toBottomOf="@+id/button5" app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:onClick="toText"
            app:layout_constraintTop_toBottomOf="@+id/button6" app:layout_constraintStart_toStartOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="@+id/button6" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="toText"
            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintStart_toStartOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="@+id/button5" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:onClick="toText"
            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="@+id/button4" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/_0"
            android:onClick="toText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/button2" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:id="@+id/button0"/>
    <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear"
            android:onClick="clear"
            app:layout_constraintTop_toBottomOf="@+id/button1" app:layout_constraintStart_toStartOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="@+id/button1" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            android:onClick="deleteText"
            app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/button3" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="395dp"
            android:layout_height="144dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/money_amount" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/money_rec"/>


</androidx.constraintlayout.widget.ConstraintLayout>