<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="#4a138c"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.startUi.StartActivity">

    <LinearLayout
            android:orientation="vertical"
            android:background="#4a138c"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#12005e"
                android:elevation="10dp" tools:ignore="UnusedAttribute">
            <Button
                    android:id="@+id/new_game"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/new_game"
                    android:elevation="10dp"
                    android:layout_weight="1" tools:ignore="UnusedAttribute"/>
            <EditText
                    android:id="@+id/new_game_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/game_name"
                    android:background="@drawable/rounded_edit_text"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:maxLines="1"
                    android:elevation="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" tools:ignore="Autofill,TextFields,UnusedAttribute"/>
            <EditText
                    android:id="@+id/money_amount_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_amount"
                    android:inputType="number"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_edit_text"
                    android:textSize="17sp"
                    android:maxLines="1"
                    android:elevation="10dp"
                    android:layout_weight="2"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" tools:ignore="Autofill,UnusedAttribute"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>